add blacklist field schedule feature
